--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
             	<artifactId>exec-maven-plugin</artifactId>
             	<version>1.2.1</version>
             	<configuration>
-	                <mainClass>de.devopoly.demo.Application</mainClass>
+	                <mainClass>de.devopoly.uuid.Application</mainClass>
             	</configuration>
         	</plugin>
 			<plugin>
