--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,12 @@ kind: pipeline
 name: default
 
 steps:
+  - name: docker
+    image: docker
+    commands:
+      - echo $DOCKER_USERNAME
+      - echo $DOCKER_PASSWORD
+    secrets: [ DOCKERHUB_USER, DOCKERHUB_PASSWORD ]
   - name: build
     image: maven
     secrets: [ DOCKERHUB_USER, DOCKERHUB_PASSWORD ]
