--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,11 @@
       		<groupId>org.springframework.boot</groupId>
       		<artifactId>spring-boot-starter-actuator</artifactId>
     	</dependency>
-
+		<!-- Micormeter core dependecy  -->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-core</artifactId>
+		</dependency>
 		<!-- Micrometer Prometheus registry  -->
 		<dependency>
 			<groupId>io.micrometer</groupId>
